--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
     <title>QR code Component</title>
 </head>
 <body>
-    <div class="main">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
-        Coded by <a href="https://www.frontendmentor.io/profile/gabrielcostaramos" target="_blank">Gabriel Costa</a>
+    <div class="container">
+        <div class="content-box">
+                <img src="./images/image-qr-code.png" alt="image-qr-code">
+                <div class="info">
+                    <h1>Improve your front-end skills by building projects</h1>
+                    <p> Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
+                </div>
+        </div>
     </div>
-    
+    <div class="footer">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Gabriel Costa</a>.
+    </div>
 </body>
 </html>
